--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
-            android:exported="true"
+            android:exported="false"
             android:grantUriPermissions="true"
             tools:replace="android:authorities">
             <meta-data
