--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,12 @@ authors:
 - Simon Lightfoot <simon@devangels.london>
 - Rafal Wachol <gorudonu@gmail.com>
 homepage: https://github.com/dart-flitter/flutter_webview_plugin
-version: 0.3.13
+version: 0.4.1
 maintainer: Rafal Wachol (@RafalWachol) 
 
 environment:
-  sdk: ">=2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.0"
 
 flutter:
   plugin:
